--- a/webUI/jaspergraph.html
+++ b/webUI/jaspergraph.html
@@ -60,7 +60,7 @@ var zoom = d3.behavior.zoom().scaleExtent([min_zoom,max_zoom])
 var g = svg.append("g");
 svg.style("cursor","move");
 
-d3.json("graph.json", function(error, graph) {
+d3.json("panzoom.json", function(error, graph) {
 
 var linkedByIndex = {};
     graph.links.forEach(function(d) {
