--- a/webUI/newsgraph.html
+++ b/webUI/newsgraph.html
@@ -30,7 +30,7 @@ var simulation = d3.forceSimulation()
     .force("charge", d3.forceManyBody())
     .force("center", d3.forceCenter(width / 2, height / 2));
 
-d3.json("test.json", function(error, graph) {
+d3.json("news.json", function(error, graph) {
     if (error) throw error;
 
 /*
