new UI look FJ!

--- a/webUI/index.html
+++ b/webUI/index.html
@@ -9,7 +9,7 @@
 		<title>Data Analytics Demo Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+      <link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+						<span class="avatar"><img src="images/avatar.jpg" alt="" height=100 width=50%/></span>
 						<h1>Data Analytics Demo Page - <strong>Fujitsu</strong>.</h1>
 					</header>
 
@@ -29,33 +29,33 @@
 							<section class="thumbnails">
 								<div>
 									<a href="newsgraph.html">
-										<img src="images/graph1.jpeg" alt="" />
+                                    <img src="images/graph1.jpeg" alt="" height=50% width=50%/>
                                         <h3>News Graph Example (scroll for nodes)</h3>
 										<h4>hover on links to see values</h4>
 									</a>
 									<a href="backlog.html">
-										<img src="images/stack01.jpg" alt="" />
+                                    <img src="images/stack01.jpg" alt="" />
 										<h3>Current Backlog</h3>
 									</a>
 								</div>
 								<div>
 									<a href="leaflet.html">
-										<img src="images/uk.jpg" alt="" />
+                                    <img src="images/uk.jpg" alt="" />
 										<h3>Map points Example (click for long/lat)</h3>
 									</a>
 									<a href="jaspergraph.html">
-										<img src="images/thumbs/04.jpg" alt="" />
+                                    <img src="images/graph.svg" alt="" />
 										<h3>Desired Functionality (Graph)</h3>
 									</a>
 								</div>
 								<div>
 									<a href="oakgraph.html">
-										<img src="images/graph2.png" alt="" />
+                                    <img src="images/graph2.png" alt="" />
 										<h3>Large graph example</h3>
                                         <h4>Wait and zoom to 25%</h4>
 									</a>
 									<a href="phyllotaxis.html">
-										<img src="images/thumbs/05.jpg" alt="" />
+                                    <img src="images/pan.jpg" alt="" />
 										<h3>Desired Functionality (Pan/Zoom)</h3>
 									</a>
 								</div>
