--- a/webUI/leaflet.html
+++ b/webUI/leaflet.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <style>
-#mapid { height: 480px; }
+#mapid { height: 550px; }
 </style>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
@@ -8,7 +8,19 @@
 <div id="mapid"></div>
 <script>
 
-var mymap = L.map('mapid').setView([51.505, -0.09], 10);
+var planes = [
+    ["7C6B07",50.99497,0.50808],
+    ["7C6B38",51.30269,0.63696],
+    ["7C6CA1",51.49413,0.5421],
+    ["7C6CA2",50.98585,0.50659],
+    ["C81D9D",50.93163,0.81726],
+    ["C82009",51.5183,0.78081],
+    ["C82081",51.42079,0.5783],
+    ["C820AB",52.08414,0.96632],
+    ["C820B6",51.51285,0.53274]
+    ];
+
+var mymap = L.map('mapid').setView([50, 0], 2);
 
 L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
             attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
@@ -17,9 +29,17 @@ L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={
     accessToken: 'pk.eyJ1IjoicGV0ZXJob2dhbiIsImEiOiJjaXlibmc5OXcwMDUxMzJwMTFmNjR0YTVqIn0.wgGLXdLvInTPohqpwLIcWw'
 }).addTo(mymap);
 
-var marker = L.marker([51.5, -0.09]).addTo(mymap);
+for (var i = 0; i < planes.length; i++) {
+    marker = new L.marker([planes[i][1],planes[i][2]])
+        .bindPopup(planes[i][0])
+        .addTo(mymap);
+}
 
+var marker = L.marker([51.5, -0.09]).addTo(mymap);
 marker.bindPopup("<b>London</b>");
+
+var marker = L.marker([52.5, 0.09]).addTo(mymap);
+marker.bindPopup("<b>Somewhere</b>");
 
 var popup = L.popup();
 
