--- a/webUI/index.html
+++ b/webUI/index.html
@@ -39,7 +39,7 @@
 									</a>
 								</div>
 								<div>
-									<a href="queryleaflet.html">
+									<a href="test2.html">
                                     <img src="images/uk.jpg" alt="" />
 										<h3>Map points Example (click for long/lat)</h3>
 									</a>
